--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,21 @@
   "description": "stuco server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "client": "cd ../frontend/stu-co-react && npm run dev",
+    "dev": "concurrently \"npm run start\" \"npm run client\""
   },
   "author": "jayia",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
+    "concurrently": "^8.2.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0"
   }
