--- a/frontend/stu-co-react/package.json
+++ b/frontend/stu-co-react/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-resizable": "^3.0.5",
