--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "axios": "^1.7.7",
     "concurrently": "^8.2.2",
     "jwt-decode": "^4.0.0",
-    "react-resizable": "^3.0.5"
+    "react-cookie": "^7.2.0",
+    "react-resizable": "^3.0.5",
+    "react-router-dom": "^6.26.1"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
+    "vite": "^5.4.3"
   }
 }
